# smart-crm

./: .gitignore  DESIGN_DOC.md  README.md  makefile  pyproject.toml
env/: .env.dev  .env.prod  .env.uat
src/: main.py
src/api/controllers/: client_controller.py  customer_controller.py
src/core/: config.py
src/domain/entities/: client_entity.py  customer_entity.py
src/domain/enums/: gender.py
src/env/: .env.dev
src/infrastructure/: database.py
src/infrastructure/database/: postgresdb.py
src/infrastructure/integrations/: aws_client.py
src/infrastructure/mappers/: client_mapper.py  customer_mapper.py
src/infrastructure/models/: users.py
src/infrastructure/repositories/: client_repository.py  customer_repository.py
src/infrastructure/respositories/: client_repository.py
src/models/: client_model.py  customer_model.py
src/schemas/requests/: create_customer_request.py  login_client_request.py  register_client_request.py
src/schemas/responses/: login_response.py
src/services/: client_service.py  customer_service.py
src/utils/: jwt_utils.py
tests/: skip_conftest.py  test_aws_client.py  test_client_service.py
