[project]
name = "smart-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "fastapi>=0.119.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

#[tool.uv.scripts]
#dev = "uvicorn smart_crm.main:app --reload"
#prod = "uvicorn smart_crm.main:app --host 0.0.0.0 --port 8000"
