[project]
name = "smart-crm"
version = "0.1.0"
description = "FastAPI Smart CRM application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pydantic[email]>=2.12.3"
]

[tool.uv]
# Optional: enable preview for upcoming features
preview = true
