[project]
name = "smart-crm"
version = "0.1.0"
description = "FastAPI Smart CRM application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "pydantic[email]>=2.12.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
# Optional: enable preview for upcoming features
preview = true
